# back-propagation

./: README.md  main.py  neural_network.py  neural_network_utils.py  neural_network_utils_tests.py  pyproject.toml  sample_evaluation_script.py  unit_tests.py
Task_1/: b.csv  db.csv  dw.csv  w.csv
